infra/ingresses/1_app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: mynodeapp.info
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api-cluster-ip-service
              port:
                number: 4000
