infra/ingresses/2_grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: grafana-monitoring-ingress
spec:
  rules:
  - host: grafana.mynodeapp.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stable-grafana
            port:
              number: 3000
